--- a/CO_LVS1_Basics.ipynb
+++ b/CO_LVS1_Basics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CO_LVS1_Basics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOtDPTzfPNRYRsYT0b2JWfX",
+      "authorship_tag": "ABX9TyMRlUS8BV9nWUp0kTMkiM6j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,61 @@
       "cell_type": "code",
       "metadata": {
         "id": "vXfPAFzgM8GL"
+      },
+      "source": [
+        "m = 5\r\n",
+        "n = 10\r\n",
+        "A = np.random.rand(n,m)"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T0Uzet4VPOoC"
+      },
+      "source": [
+        "def penalty(p):\r\n",
+        "  return np.max(np.abs(np.log(A@p)))"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4wqU6jODPo_3",
+        "outputId": "6d1ee678-c865-4712-f84e-79c3c92ca5ae"
+      },
+      "source": [
+        "p =cp.Variable(5)\r\n",
+        "constraints = [p>=0,p<=1]\r\n",
+        "objective = cp.Minimize(cp.max(cp.maximum(A@p,cp.inv_pos(A@p))))\r\n",
+        "prob = cp.Problem(objective,constraints)\r\n",
+        "prob.solve()\r\n",
+        "print('powers',p.value)\r\n",
+        "print('penalty', penalty(p.value))"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "powers [0.33481593 0.75076801 0.43270327 0.22636836 0.42052824]\n",
+            "penalty 0.2215306814902251\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xAyl0IcnQMel"
       },
       "source": [
         ""
