--- a/CO_LVS1_Basics.ipynb
+++ b/CO_LVS1_Basics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CO_LVS1_Basics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMRlUS8BV9nWUp0kTMkiM6j",
+      "authorship_tag": "ABX9TyNtiD1NKIedAtBuw9iwRSi/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "n = 10\r\n",
         "A = np.random.rand(n,m)"
       ],
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
         "def penalty(p):\r\n",
         "  return np.max(np.abs(np.log(A@p)))"
       ],
-      "execution_count": 12,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4wqU6jODPo_3",
-        "outputId": "6d1ee678-c865-4712-f84e-79c3c92ca5ae"
+        "outputId": "e88293d3-4f06-442c-c486-5284f0d100e2"
       },
       "source": [
         "p =cp.Variable(5)\r\n",
@@ -79,13 +79,14 @@
         "print('powers',p.value)\r\n",
         "print('penalty', penalty(p.value))"
       ],
-      "execution_count": 13,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "powers [0.33481593 0.75076801 0.43270327 0.22636836 0.42052824]\n",
-            "penalty 0.2215306814902251\n"
+            "powers [3.58582935e-01 4.66161578e-11 4.43061248e-01 8.16702566e-01\n",
+            " 5.19892913e-01]\n",
+            "penalty 0.2263737853384752\n"
           ],
           "name": "stdout"
         }
@@ -94,7 +95,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xAyl0IcnQMel"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xAyl0IcnQMel",
+        "outputId": "bfedf6d4-dfc9-4988-8b59-3552f8f4c3a5"
+      },
+      "source": [
+        "p =cp.Variable(5)\r\n",
+        "objective = cp.Minimize(cp.sum_squares(A@p-np.ones(n,)))\r\n",
+        "prob = cp.Problem(objective)\r\n",
+        "prob.solve()\r\n",
+        "clipped_powers = np.clip(p.value,0,1)\r\n",
+        "print('powers',p.value)\r\n",
+        "print('clipped powers',clipped_powers)\r\n",
+        "print('penalty', penalty(p.value))"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "powers [ 0.36875415 -0.02979117  0.37807977  0.63041601  0.62715893]\n",
+            "clipped powers [0.36875415 0.         0.37807977 0.63041601 0.62715893]\n",
+            "penalty 0.44967042597983525\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b8Lu7JCHRPG4"
       },
       "source": [
         ""
